Fixed to truncate long names in contacts list.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1873,6 +1873,19 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
     border-bottom-color #2E1C3A
     box-shadow inset 0 0 1px rgba(255,255,255, 0.2)
 
+  .room-avatar
+    float left
+
+    &.avatars-off
+      margin-top 6px
+
+  .username
+    max-width room-sidebar-width - 50px - 35px
+    overflow ellipsis
+    margin-left 50px // Avatar width.
+    margin-top 5px
+    margin-bottom 5px
+
 
 room-content-margin-width = 10px
 room-content-margin-height = 10px
